--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1b5122c",
+   "id": "e935a347",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,17 +86,27 @@
     "    per_md.columns = [\"MD Name\", \"Headcount\"]\n",
     "    summary_tables.append((\"Headcount per MD\", per_md))\n",
     "\n",
-    "    # per-GCB3\n",
-    "    per_gcb3 = hierarchy_df[hierarchy_df[GCB_COL] == 3] \\\n",
-    "        .groupby(EMP_NAME_COL)[EMP_ID_COL].count().reset_index()\n",
-    "    per_gcb3.columns = [\"GCB3 Name\", \"Direct Reports\"]\n",
+    "       # per-GCB3 (count employees where this person is Manager ID)\n",
+    "    per_gcb3 = hierarchy_df[hierarchy_df[\"Manager GCB\"] == 3] \\\n",
+    "        .groupby(\"Manager ID\")[EMP_ID_COL].nunique().reset_index()\n",
+    "    per_gcb3 = per_gcb3.merge(\n",
+    "        hierarchy_df[[EMP_ID_COL, EMP_NAME_COL]],\n",
+    "        left_on=\"Manager ID\", right_on=EMP_ID_COL,\n",
+    "        how=\"left\"\n",
+    "    )[[EMP_NAME_COL, \"Manager ID\", EMP_ID_COL]]\n",
+    "    per_gcb3.columns = [\"GCB3 Name\", \"GCB3 ID\", \"Direct Reports\"]\n",
     "    summary_tables.append((\"Direct Reports per GCB3\", per_gcb3))\n",
     "\n",
-    "    # per-GCB4\n",
-    "    per_gcb4 = hierarchy_df[hierarchy_df[GCB_COL] == 4] \\\n",
-    "        .groupby(EMP_NAME_COL)[EMP_ID_COL].count().reset_index()\n",
-    "    per_gcb4.columns = [\"GCB4 Name\", \"Direct Reports\"]\n",
-    "    summary_tables.append((\"Direct Reports per GCB4\", per_gcb4))\n",
+    "    # per-GCB4 (count employees where this person is Manager ID)\n",
+    "    per_gcb4 = hierarchy_df[hierarchy_df[\"Manager GCB\"] == 4] \\\n",
+    "        .groupby(\"Manager ID\")[EMP_ID_COL].nunique().reset_index()\n",
+    "    per_gcb4 = per_gcb4.merge(\n",
+    "        hierarchy_df[[EMP_ID_COL, EMP_NAME_COL]],\n",
+    "        left_on=\"Manager ID\", right_on=EMP_ID_COL,\n",
+    "        how=\"left\"\n",
+    "    )[[EMP_NAME_COL, \"Manager ID\", EMP_ID_COL]]\n",
+    "    per_gcb4.columns = [\"GCB4 Name\", \"GCB4 ID\", \"Direct Reports\"]\n",
+    "\n",
     "\n",
     "    # Save all outputs\n",
     "    with pd.ExcelWriter(output_file, engine=\"openpyxl\") as writer:\n",
