--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e935a347",
+   "id": "01439253",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,16 +86,24 @@
     "    per_md.columns = [\"MD Name\", \"Headcount\"]\n",
     "    summary_tables.append((\"Headcount per MD\", per_md))\n",
     "\n",
-    "       # per-GCB3 (count employees where this person is Manager ID)\n",
-    "    per_gcb3 = hierarchy_df[hierarchy_df[\"Manager GCB\"] == 3] \\\n",
-    "        .groupby(\"Manager ID\")[EMP_ID_COL].nunique().reset_index()\n",
-    "    per_gcb3 = per_gcb3.merge(\n",
-    "        hierarchy_df[[EMP_ID_COL, EMP_NAME_COL]],\n",
-    "        left_on=\"Manager ID\", right_on=EMP_ID_COL,\n",
-    "        how=\"left\"\n",
-    "    )[[EMP_NAME_COL, \"Manager ID\", EMP_ID_COL]]\n",
-    "    per_gcb3.columns = [\"GCB3 Name\", \"GCB3 ID\", \"Direct Reports\"]\n",
-    "    summary_tables.append((\"Direct Reports per GCB3\", per_gcb3))\n",
+    "# per-GCB3 (count employees where this person is Manager ID)\n",
+    "per_gcb3 = (\n",
+    "    hierarchy_df[hierarchy_df[\"Manager GCB\"] == 3]\n",
+    "    .groupby(\"Manager ID\")[EMP_ID_COL]\n",
+    "    .nunique()\n",
+    "    .reset_index()\n",
+    ")\n",
+    "# Get unique manager details\n",
+    "managers = hierarchy_df[[EMP_ID_COL, EMP_NAME_COL]].drop_duplicates()\n",
+    "per_gcb3 = per_gcb3.merge(\n",
+    "    managers,\n",
+    "    left_on=\"Manager ID\",\n",
+    "    right_on=EMP_ID_COL,\n",
+    "    how=\"left\"\n",
+    ")[[EMP_NAME_COL, \"Manager ID\", EMP_ID_COL]]\n",
+    "per_gcb3.columns = [\"GCB3 Name\", \"GCB3 ID\", \"Direct Reports\"]\n",
+    "summary_tables.append((\"Direct Reports per GCB3\", per_gcb3))\n",
+    "\n",
     "\n",
     "    # per-GCB4 (count employees where this person is Manager ID)\n",
     "    per_gcb4 = hierarchy_df[hierarchy_df[\"Manager GCB\"] == 4] \\\n",
