--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01439253",
+   "id": "1557c337",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,25 +84,27 @@
     "    # per-MD\n",
     "    per_md = hierarchy_df.groupby(\"MD Name\")[EMP_ID_COL].nunique().reset_index()\n",
     "    per_md.columns = [\"MD Name\", \"Headcount\"]\n",
-    "    summary_tables.append((\"Headcount per MD\", per_md))\n",
-    "\n",
-    "# per-GCB3 (count employees where this person is Manager ID)\n",
     "per_gcb3 = (\n",
     "    hierarchy_df[hierarchy_df[\"Manager GCB\"] == 3]\n",
     "    .groupby(\"Manager ID\")[EMP_ID_COL]\n",
     "    .nunique()\n",
     "    .reset_index()\n",
     ")\n",
-    "# Get unique manager details\n",
+    "\n",
+    "# Keep only unique manager info\n",
     "managers = hierarchy_df[[EMP_ID_COL, EMP_NAME_COL]].drop_duplicates()\n",
+    "\n",
+    "# Merge but avoid duplicate \"Employee ID\" column\n",
     "per_gcb3 = per_gcb3.merge(\n",
     "    managers,\n",
     "    left_on=\"Manager ID\",\n",
     "    right_on=EMP_ID_COL,\n",
     "    how=\"left\"\n",
-    ")[[EMP_NAME_COL, \"Manager ID\", EMP_ID_COL]]\n",
+    ")\n",
+    "\n",
+    "# Now select safe columns\n",
+    "per_gcb3 = per_gcb3[[EMP_NAME_COL, \"Manager ID\", EMP_ID_COL]]\n",
     "per_gcb3.columns = [\"GCB3 Name\", \"GCB3 ID\", \"Direct Reports\"]\n",
-    "summary_tables.append((\"Direct Reports per GCB3\", per_gcb3))\n",
     "\n",
     "\n",
     "    # per-GCB4 (count employees where this person is Manager ID)\n",
