--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,101 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1557c337",
+   "id": "5b50e144",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    # -------- Single consolidated Summary sheet (REPLACE EXISTING SUMMARY BLOCK WITH THIS) --------\n",
+    "    summary_tables = []\n",
+    "\n",
+    "    # overall counts\n",
+    "    summary = pd.DataFrame([{\n",
+    "        \"Metric\": \"Total Employees\", \"Value\": len(enriched)\n",
+    "    }, {\n",
+    "        \"Metric\": \"Total in Hierarchy\", \"Value\": hierarchy_df[EMP_ID_COL].nunique()\n",
+    "    }, {\n",
+    "        \"Metric\": \"Missing Managers Count\", \"Value\": len(exceptions_df)\n",
+    "    }])\n",
+    "    summary_tables.append((\"Overall Summary\", summary))\n",
+    "\n",
+    "    # per-MD\n",
+    "    per_md = hierarchy_df.groupby(\"MD Name\")[EMP_ID_COL].nunique().reset_index()\n",
+    "    per_md.columns = [\"MD Name\", \"Headcount\"]\n",
+    "    summary_tables.append((\"Headcount per MD\", per_md))\n",
+    "\n",
+    "    # ---- Prepare a safe manager-name map from enriched (string keys) ----\n",
+    "    manager_name_map = {}\n",
+    "    if EMP_ID_COL in enriched.columns and EMP_NAME_COL in enriched.columns:\n",
+    "        mgr_df = enriched[[EMP_ID_COL, EMP_NAME_COL]].drop_duplicates().copy()\n",
+    "        mgr_df[EMP_ID_COL] = mgr_df[EMP_ID_COL].astype(str).str.strip()\n",
+    "        mgr_df[EMP_NAME_COL] = mgr_df[EMP_NAME_COL].astype(str).str.strip()\n",
+    "        manager_name_map = mgr_df.set_index(EMP_ID_COL)[EMP_NAME_COL].to_dict()\n",
+    "\n",
+    "    # Make sure Manager GCB column exists in hierarchy_df (if not, create safe NA column)\n",
+    "    if \"Manager GCB\" not in hierarchy_df.columns:\n",
+    "        hierarchy_df[\"Manager GCB\"] = pd.NA\n",
+    "\n",
+    "    # Convert Manager GCB to numeric where possible for correct matching (coerce errors)\n",
+    "    mgr_gcb_numeric = pd.to_numeric(hierarchy_df[\"Manager GCB\"], errors=\"coerce\")\n",
+    "\n",
+    "    # -------------------------------\n",
+    "    # Per-GCB3: direct report counts\n",
+    "    # -------------------------------\n",
+    "    per_gcb3_counts = (\n",
+    "        hierarchy_df.loc[mgr_gcb_numeric == 3]\n",
+    "        .groupby(\"Manager ID\")[EMP_ID_COL]\n",
+    "        .nunique()\n",
+    "        .reset_index(name=\"Direct Reports\")\n",
+    "    )\n",
+    "\n",
+    "    # normalize Manager ID as string to map reliably\n",
+    "    per_gcb3_counts[\"Manager ID\"] = per_gcb3_counts[\"Manager ID\"].astype(str).str.strip()\n",
+    "    per_gcb3_counts[\"GCB3 Name\"] = per_gcb3_counts[\"Manager ID\"].map(manager_name_map).fillna(\"\")\n",
+    "    per_gcb3 = per_gcb3_counts[[\"GCB3 Name\", \"Manager ID\", \"Direct Reports\"]].copy()\n",
+    "    per_gcb3.columns = [\"GCB3 Name\", \"GCB3 ID\", \"Direct Reports\"]\n",
+    "    summary_tables.append((\"Direct Reports per GCB3\", per_gcb3))\n",
+    "\n",
+    "    # -------------------------------\n",
+    "    # Per-GCB4: direct report counts\n",
+    "    # -------------------------------\n",
+    "    per_gcb4_counts = (\n",
+    "        hierarchy_df.loc[mgr_gcb_numeric == 4]\n",
+    "        .groupby(\"Manager ID\")[EMP_ID_COL]\n",
+    "        .nunique()\n",
+    "        .reset_index(name=\"Direct Reports\")\n",
+    "    )\n",
+    "    per_gcb4_counts[\"Manager ID\"] = per_gcb4_counts[\"Manager ID\"].astype(str).str.strip()\n",
+    "    per_gcb4_counts[\"GCB4 Name\"] = per_gcb4_counts[\"Manager ID\"].map(manager_name_map).fillna(\"\")\n",
+    "    per_gcb4 = per_gcb4_counts[[\"GCB4 Name\", \"Manager ID\", \"Direct Reports\"]].copy()\n",
+    "    per_gcb4.columns = [\"GCB4 Name\", \"GCB4 ID\", \"Direct Reports\"]\n",
+    "    summary_tables.append((\"Direct Reports per GCB4\", per_gcb4))\n",
+    "\n",
+    "    # -------------------------------\n",
+    "    # WRITE OUTPUT (Hierarchy + Missing Managers + ONE Summary sheet stacked)\n",
+    "    # -------------------------------\n",
+    "    with pd.ExcelWriter(output_file, engine=\"openpyxl\") as writer:\n",
+    "        hierarchy_df.to_excel(writer, index=False, sheet_name=\"Hierarchy Report\")\n",
+    "        if not exceptions_df.empty:\n",
+    "            exceptions_df.to_excel(writer, index=False, sheet_name=\"Missing Managers\")\n",
+    "\n",
+    "        # Write all summaries stacked in one sheet with title rows\n",
+    "        start_row = 0\n",
+    "        for title, df in summary_tables:\n",
+    "            # header/title row\n",
+    "            pd.DataFrame([[title]]).to_excel(writer, index=False, header=False,\n",
+    "                                             sheet_name=\"Summary\", startrow=start_row)\n",
+    "            start_row += 1\n",
+    "            df.to_excel(writer, index=False, sheet_name=\"Summary\", startrow=start_row)\n",
+    "            start_row += len(df) + 2  # leave a gap\n",
+    "\n",
+    "    print(f\"✅ Phase 2 completed → {output_file}\")\n",
+    "    return hierarchy_df, exceptions_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb20624f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,39 +178,56 @@
     "    # per-MD\n",
     "    per_md = hierarchy_df.groupby(\"MD Name\")[EMP_ID_COL].nunique().reset_index()\n",
     "    per_md.columns = [\"MD Name\", \"Headcount\"]\n",
+    "# -------------------------------\n",
+    "# Per-GCB3: direct report counts\n",
+    "# -------------------------------\n",
     "per_gcb3 = (\n",
     "    hierarchy_df[hierarchy_df[\"Manager GCB\"] == 3]\n",
     "    .groupby(\"Manager ID\")[EMP_ID_COL]\n",
     "    .nunique()\n",
-    "    .reset_index()\n",
+    "    .reset_index(name=\"Direct Reports\")\n",
     ")\n",
     "\n",
-    "# Keep only unique manager info\n",
-    "managers = hierarchy_df[[EMP_ID_COL, EMP_NAME_COL]].drop_duplicates()\n",
+    "# unique manager info (ID + Name)\n",
+    "managers3 = hierarchy_df[[EMP_ID_COL, EMP_NAME_COL]].drop_duplicates()\n",
     "\n",
-    "# Merge but avoid duplicate \"Employee ID\" column\n",
+    "# merge to get manager name\n",
     "per_gcb3 = per_gcb3.merge(\n",
-    "    managers,\n",
+    "    managers3,\n",
     "    left_on=\"Manager ID\",\n",
     "    right_on=EMP_ID_COL,\n",
     "    how=\"left\"\n",
-    ")\n",
+    ")[[\"Employee Name\", \"Manager ID\", \"Direct Reports\"]]\n",
     "\n",
-    "# Now select safe columns\n",
-    "per_gcb3 = per_gcb3[[EMP_NAME_COL, \"Manager ID\", EMP_ID_COL]]\n",
     "per_gcb3.columns = [\"GCB3 Name\", \"GCB3 ID\", \"Direct Reports\"]\n",
     "\n",
+    "summary_tables.append((\"Direct Reports per GCB3\", per_gcb3))\n",
     "\n",
-    "    # per-GCB4 (count employees where this person is Manager ID)\n",
-    "    per_gcb4 = hierarchy_df[hierarchy_df[\"Manager GCB\"] == 4] \\\n",
-    "        .groupby(\"Manager ID\")[EMP_ID_COL].nunique().reset_index()\n",
-    "    per_gcb4 = per_gcb4.merge(\n",
-    "        hierarchy_df[[EMP_ID_COL, EMP_NAME_COL]],\n",
-    "        left_on=\"Manager ID\", right_on=EMP_ID_COL,\n",
-    "        how=\"left\"\n",
-    "    )[[EMP_NAME_COL, \"Manager ID\", EMP_ID_COL]]\n",
-    "    per_gcb4.columns = [\"GCB4 Name\", \"GCB4 ID\", \"Direct Reports\"]\n",
     "\n",
+    "# -------------------------------\n",
+    "# Per-GCB4: direct report counts\n",
+    "# -------------------------------\n",
+    "per_gcb4 = (\n",
+    "    hierarchy_df[hierarchy_df[\"Manager GCB\"] == 4]\n",
+    "    .groupby(\"Manager ID\")[EMP_ID_COL]\n",
+    "    .nunique()\n",
+    "    .reset_index(name=\"Direct Reports\")\n",
+    ")\n",
+    "\n",
+    "# unique manager info (ID + Name)\n",
+    "managers4 = hierarchy_df[[EMP_ID_COL, EMP_NAME_COL]].drop_duplicates()\n",
+    "\n",
+    "# merge to get manager name\n",
+    "per_gcb4 = per_gcb4.merge(\n",
+    "    managers4,\n",
+    "    left_on=\"Manager ID\",\n",
+    "    right_on=EMP_ID_COL,\n",
+    "    how=\"left\"\n",
+    ")[[\"Employee Name\", \"Manager ID\", \"Direct Reports\"]]\n",
+    "\n",
+    "per_gcb4.columns = [\"GCB4 Name\", \"GCB4 ID\", \"Direct Reports\"]\n",
+    "\n",
+    "summary_tables.append((\"Direct Reports per GCB4\", per_gcb4))\n",
     "\n",
     "    # Save all outputs\n",
     "    with pd.ExcelWriter(output_file, engine=\"openpyxl\") as writer:\n",
